登录和注册界面组件,UI框架,路由

--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,17 @@
   background: #ccc;
   margin: 10px auto;
 }
+
+.Container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  width: 300px;
+  height: 400px;
+}
+.Registered a {
+  color: #000;
+}
