--- a/src/component/Login/index.css
+++ b/src/component/Login/index.css
@@ -11,3 +11,41 @@
   border-radius: 5px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
 }
+.Image {
+  width: 100px;
+  height: 100px;
+  margin: 40px auto;
+  border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+}
+.Image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+.Input {
+  width: 200px;
+  padding: 0 50px;
+}
+.LoginBtn {
+  margin-top: 20px;
+}
+.LoginBtn .MuiButton-root {
+  min-width: 200px !important;
+}
+.Registered {
+  position: relative;
+  width: 100%;
+  height: 30px;
+  margin-top: 20px;
+  font-size: 14px;
+}
+.Registered a {
+  position: absolute;
+  right: 60px;
+  text-decoration: none;
+}
+.Registered a:hover {
+  text-decoration: underline;
+  color: blue;
+}
