--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
   height: 675px;
   background: #ccc;
   margin: 10px auto;
+  border-radius: 5px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .Container {
