--- a/src/component/Messages/index.css
+++ b/src/component/Messages/index.css
@@ -1,11 +1,17 @@
-.MessageContainer {
-  width: 260px;
+.MessageCover {
+  display: flex;
+  width: 100%;
   height: 100%;
+}
+.MessageContainer {
+  position: relative;
+  width: 260px;
+  height: 675px;
 }
 .Search {
   position: relative;
-  width: 100%;
-  height: 30px;
+  width: 259px;
+  height: 29px;
   background: #fafafa;
   padding: 15px 0;
   border-right: 1px solid #dedede;
@@ -42,10 +48,18 @@
   border-radius: 5px;
 }
 .MessageList {
-  width: 260px;
+  width: 259px;
   height: 615px;
   background: #fbfbfb;
   overflow: hidden;
   border-right: 1px solid #dedede;
   /* overflow-y: scroll; */
+}
+.MessageRoom {
+  width: 500px;
+  height: 100%;
+  background: white;
+  color: #ccc;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
