--- a/src/component/Messages/index.css
+++ b/src/component/Messages/index.css
@@ -55,6 +55,18 @@
   border-right: 1px solid #dedede;
   /* overflow-y: scroll; */
 }
+.MessageList .ListItem {
+  display: inline-block;
+  width: 100%;
+  height: 76px;
+  text-decoration: none;
+}
+.ListItem:hover {
+  background: rgba(206, 206, 206, 0.6);
+}
+.MessageList .Active {
+  background: #cecece;
+}
 .MessageRoom {
   width: 500px;
   height: 100%;
