--- a/src/component/Messages/index.css
+++ b/src/component/Messages/index.css
@@ -53,7 +53,7 @@
   background: #fbfbfb;
   overflow: hidden;
   border-right: 1px solid #dedede;
-  /* overflow-y: scroll; */
+  overflow-y: auto;
 }
 .MessageList .ListItem {
   display: inline-block;
