头像请求以及样式修改

--- a/src/component/Chat/index.css
+++ b/src/component/Chat/index.css
@@ -34,7 +34,7 @@
   width: 45px;
   height: 45px;
   border-radius: 5px;
-  background: cornsilk;
+  background: #fff;
   margin: 0 auto;
 }
 .ChatImg img {
